--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,9 +68,9 @@ endif(EVHTP_USE_DEFER_ACCEPT)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-include(BaseConfig)
+include(ReveldbBaseConfig)
 
-FIND_PACKAGE(LibEvent REQUIRED)
+FIND_PACKAGE(Libevent REQUIRED)
 FIND_PACKAGE(OpenSSL)
 FIND_PATH(LIBEVENT_INCLUDE_DIR event2/event.h REQUIRED)
 
