clean CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,13 +35,13 @@ CHECK_TYPE_SIZE("long" SIZEOF_LONG)
 CHECK_TYPE_SIZE("short" SIZEOF_SHORT)
 
 if (NOT HAVE_SYS_TREE)
-    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/compat/sys/tree.h.in\
-    ${CMAKE_CURRENT_BINARY_DIR}/compat/sys/tree.h)
+    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/compat/sys/tree.h.in
+        ${CMAKE_CURRENT_BINARY_DIR}/compat/sys/tree.h)
 endif(NOT HAVE_SYS_TREE)
 
 if (NOT HAVE_SYS_QUEUE)
-    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/compat/sys/queue.h.in\
-    ${CMAKE_CURRENT_BINARY_DIR}/compat/sys/queue.h)
+    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/compat/sys/queue.h.in
+        ${CMAKE_CURRENT_BINARY_DIR}/compat/sys/queue.h)
 endif(NOT HAVE_SYS_QUEUE)
 
 if (NOT HAVE_STRNDUP)
@@ -58,13 +58,11 @@ endif(NOT HAVE_SYS_UN)
 
 OPTION(EVHTTPX_DISABLE_SSL       "Disable ssl support"      OFF)
 OPTION(EVHTTPX_DISABLE_EVTHR     "Disable evthread support" OFF)
-
-# -DEVHTP_USE_DEFER_ACCEPT:STRING=ON
 OPTION(EVHTTPX_USE_DEFER_ACCEPT  "Enable TCP_DEFER_ACCEPT"  OFF) 
 
 if (EVHTTPX_USE_DEFER_ACCEPT)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUSE_DEFER_ACCEPT")
-endif(EVHTP_USE_DEFER_ACCEPT)
+endif(EVHTTPX_USE_DEFER_ACCEPT)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -86,8 +84,8 @@ INCLUDE_DIRECTORIES(
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}/compat
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/evhttpx
     ${CMAKE_CURRENT_SOURCE_DIR}/src/nedmalloc
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/evhttpx
     ${CMAKE_CURRENT_SOURCE_DIR}/src/evhttpx/evthr
     ${OPENSSL_INCLUDE_DIR}
     ${LIBEVENT_INCLUDE_DIR}
@@ -116,7 +114,7 @@ if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
 endif (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 
-if (EVHTP_DISABLE_SSL)
+if (EVHTTPX_DISABLE_SSL)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DEVHTTPX_DISABLE_SSL")
 endif()
 
