clean CMakeLists.txt and include dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-PROJECT(reveldb)
-
-SET(PROJECT_MAJOR_VERSION 0)
-SET(PROJECT_MINOR_VERSION 0)
-SET(PROJECT_PATCH_VERSION 1)
+PROJECT(REVELDB)
 
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 
@@ -25,24 +21,24 @@ CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
 CHECK_INCLUDE_FILES(sys/times.h HAVE_SYS_TIMES_H)
 CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
 CHECK_INCLUDE_FILES(memory.h HAVE_MEMORY_H)
-CHECK_INCLUDE_FILES(stdarg.h HAVE_STDARG_PROTOTYPES)
-CHECK_INCLUDE_FILES(sys/tree.h HAVE_SYS_TREE)
-CHECK_INCLUDE_FILES(sys/queue.h HAVE_SYS_QUEUE)
+CHECK_INCLUDE_FILES(stdarg.h HAVE_STDARG_H)
+CHECK_INCLUDE_FILES(sys/tree.h HAVE_SYS_TREE_H)
+CHECK_INCLUDE_FILES(sys/queue.h HAVE_SYS_QUEUE_H)
 CHECK_INCLUDE_FILES(sys/un.h HAVE_SYS_UN)
 
 CHECK_TYPE_SIZE("int" SIZEOF_INT)
 CHECK_TYPE_SIZE("long" SIZEOF_LONG)
 CHECK_TYPE_SIZE("short" SIZEOF_SHORT)
 
-if (NOT HAVE_SYS_TREE)
+if (NOT HAVE_SYS_TREE_H)
     CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/compat/sys/tree.h.in
         ${CMAKE_CURRENT_BINARY_DIR}/compat/sys/tree.h)
-endif(NOT HAVE_SYS_TREE)
+endif(NOT HAVE_SYS_TREE_H)
 
-if (NOT HAVE_SYS_QUEUE)
+if (NOT HAVE_SYS_QUEUE_H)
     CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/compat/sys/queue.h.in
         ${CMAKE_CURRENT_BINARY_DIR}/compat/sys/queue.h)
-endif(NOT HAVE_SYS_QUEUE)
+endif(NOT HAVE_SYS_QUEUE_H)
 
 if (NOT HAVE_STRNDUP)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNO_STRNDUP")
@@ -83,15 +79,16 @@ endif(NOT OPENSSL_FOUND)
 INCLUDE_DIRECTORIES(
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}/compat
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/nedmalloc
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/evhttpx
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/evhttpx/evthr
+    ${CMAKE_CURRENT_SOURCE_DIR}/
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/nedmalloc/
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/evhttpx/
     ${OPENSSL_INCLUDE_DIR}
     ${LIBEVENT_INCLUDE_DIR}
 )
 
-SET(LIBEVHTTPX_EXTERNAL_LIBS
+SET(REVELDB_EXTERNAL_LIBS
         ${LIBEVENT_LIBRARY}
         ${LIBEVENT_PTHREADS_LIBRARY}
         ${LIBEVENT_OPENSSL_LIBRARY}
@@ -105,11 +102,6 @@ if (NOT ${LIBEVENT_OPENSSL_FOUND})
     SET(EVHTTPX_DISABLE_SSL 1)
 endif(NOT ${LIBEVENT_OPENSSL_FOUND})
 
-if (NOT EVHTTPX_DISABLE_EVTHR)
-    SET(LIBEVHTTPX_EXTERNAL_LIBS ${LIBEVHTTPX_EXTERNAL_LIBS} pthread)
-    SET(LIBEVHTTPX_SOURCES ${LIBEVHTTPX_SOURCES} evthr/evthr.c)
-endif(NOT EVHTTPX_DISABLE_EVTHR)
-
 if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
 endif (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
@@ -122,7 +114,8 @@ FIND_LIBRARY(LIB_DL dl)
 SET(SYS_LIBS ${LIB_DL})
 
 if (NOT APPLE)
-    find_library (LIB_RT rt)
+    FIND_LIBRARY(LIB_RT rt)
     SET(SYS_LIBS ${SYS_LIBS} ${LIB_RT})
 endif()
 
+ADD_SUBDIRECTORY(src)
