it's workable now, ahahaha :-)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,8 +65,10 @@ SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 include(ReveldbBaseConfig)
 
 FIND_PACKAGE(Libevent REQUIRED)
+FIND_PACKAGE(Leveldb REQUIRED)
 FIND_PACKAGE(OpenSSL)
 FIND_PATH(LIBEVENT_INCLUDE_DIR event2/event.h REQUIRED)
+FIND_PATH(LEVELDB_INCLUDE_DIR leveldb/c.h REQUIRED)
 
 if (NOT OPENSSL_FOUND)
     SET(EVHTTPX_DISABLE_SSL ON)
@@ -86,10 +88,12 @@ INCLUDE_DIRECTORIES(
     ${CMAKE_CURRENT_SOURCE_DIR}/src/evhttpx/
     ${OPENSSL_INCLUDE_DIR}
     ${LIBEVENT_INCLUDE_DIR}
+    ${LEVELDB_INCLUDE_DIR}
 )
 
 SET(REVELDB_EXTERNAL_LIBS
         ${LIBEVENT_LIBRARY}
+        ${LEVELDB_LIBRARY}
         ${LIBEVENT_PTHREADS_LIBRARY}
         ${LIBEVENT_OPENSSL_LIBRARY}
         ${OPENSSL_LIBRARIES})
