read config from file is workable now.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,8 @@ SET(REVELDB_SRC
     main.c
     reveldb.c
     cJSON.c
-    config.c
+    xconfig.c
+    log.c
     rbtree.c
     splaytree.c
     tstring.c
